[package]
name = "procbox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
nix = "0.27"
anyhow = "1.0"
sysinfo = "0.29"
serde_json = "1.0"
libc = "0.2"
libseccomp = { version = "0.7", package = "libseccomp" } # libseccomp-rs wrapper crate
uuid = { version = "1", features = ["v4"] }
